<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_famous"
            android:icon="@drawable/ic_tag_faces_black_24dp"
            android:title="@string/famous" />

        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_search_black_24dp"
            android:title="@string/hero_search" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_favorite_black_24dp"
            android:title="@string/favorite_heros" />

    </group>

    <item android:title="@string/communicate">
        <menu>

            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/logout"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>
