<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/widget_background"
    android:orientation="vertical"
    android:padding="@dimen/widget_margin">

    <TextView
        android:id="@+id/appwidget_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_margin="@dimen/margin_eight"
        android:contentDescription="@string/appwidget_text"
        android:text="@string/appwidget_text"
        android:textColor="#ffffff"
        android:textSize="@dimen/text_lable_size"
        android:textStyle="bold|italic" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="@dimen/text_sixteen"
        android:layout_margin="@dimen/margin_eight"
        android:text="@string/real_name_string"/>
    <TextView
        android:id="@+id/appwidget_realname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_margin="@dimen/margin_eight"
        android:contentDescription="@string/appwidget_text"
        android:text="@string/appwidget_text"
        android:textColor="#ffffff"
        android:textSize="@dimen/text_lable_size"
        android:textStyle="bold|italic" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="@dimen/text_sixteen"
        android:layout_margin="@dimen/margin_eight"
        android:text="@string/publisher_string"/>
    <TextView
        android:id="@+id/appwidget_publisher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_margin="8dp"
        android:contentDescription="@string/appwidget_text"
        android:text="@string/appwidget_text"
        android:textColor="#ffffff"
        android:textSize="@dimen/text_lable_size"
        android:textStyle="bold|italic" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="@dimen/text_sixteen"
        android:layout_margin="@dimen/margin_eight"
        android:text="@string/first_appearence_string"/>
    <TextView
        android:id="@+id/appwidget_fappearence"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_margin="@dimen/margin_eight"
        android:contentDescription="@string/appwidget_text"
        android:text="@string/appwidget_text"
        android:textColor="#ffffff"
        android:textSize="@dimen/text_lable_size"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/appwidget_favorite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_margin="@dimen/margin_eight"
        android:contentDescription="@string/appwidget_text"
        android:text="@string/appwidget_text"
        android:textColor="@color/black"
        android:gravity="center"
        android:textSize="@dimen/text_sixteen"
        android:textStyle="bold|italic" />

</LinearLayout>